[gd_scene load_steps=2 format=3 uid="uid://dfl0mq72bth36"]

[ext_resource type="Script" path="res://scenes/enemy_spawner.gd" id="1_pqikd"]

[node name="EnemySpawner" type="Node2D"]
process_mode = 1
script = ExtResource("1_pqikd")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="Timer2" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Level1" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Level1" groups=["vertical"]]
position = Vector2(339, -50)

[node name="Marker2D2" type="Marker2D" parent="Level1" groups=["vertical"]]
position = Vector2(384, -50)

[node name="Marker2D3" type="Marker2D" parent="Level1" groups=["vertical"]]
position = Vector2(429, -50)

[node name="Marker2D4" type="Marker2D" parent="Level1" groups=["vertical"]]
position = Vector2(339, 800)

[node name="Marker2D5" type="Marker2D" parent="Level1" groups=["vertical"]]
position = Vector2(384, 800)

[node name="Marker2D6" type="Marker2D" parent="Level1" groups=["vertical"]]
position = Vector2(429, 800)

[node name="Level2" type="Node2D" parent="."]

[node name="Marker2D7" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(1632, -50)

[node name="Marker2D8" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(1590, -50)

[node name="Marker2D9" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(1674, -50)

[node name="Marker2D10" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(1632, 800)

[node name="Marker2D11" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(1590, 800)

[node name="Marker2D12" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(1674, 800)

[node name="Marker2D13" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(2166, 800)

[node name="Marker2D14" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(2208, 800)

[node name="Marker2D15" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(2250, 800)

[node name="Marker2D16" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(2166, -50)

[node name="Marker2D17" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(2208, -50)

[node name="Marker2D18" type="Marker2D" parent="Level2" groups=["vertical"]]
position = Vector2(2250, -50)

[node name="Level3" type="Node2D" parent="."]

[node name="Marker2D19" type="Marker2D" parent="Level3" groups=["horizontal"]]
position = Vector2(1630, 1590)

[node name="Marker2D20" type="Marker2D" parent="Level3" groups=["horizontal"]]
position = Vector2(1630, 1632)

[node name="Marker2D21" type="Marker2D" parent="Level3" groups=["horizontal"]]
position = Vector2(1630, 1674)

[node name="Marker2D22" type="Marker2D" parent="Level3" groups=["horizontal"]]
position = Vector2(4802, 1590)

[node name="Marker2D23" type="Marker2D" parent="Level3" groups=["horizontal"]]
position = Vector2(4802, 1632)

[node name="Marker2D24" type="Marker2D" parent="Level3" groups=["horizontal"]]
position = Vector2(4802, 1674)

[node name="Level4" type="Node2D" parent="."]

[node name="Marker2D25" type="Marker2D" parent="Level4" groups=["horizontal"]]
position = Vector2(5806, 1590)

[node name="Marker2D26" type="Marker2D" parent="Level4" groups=["horizontal"]]
position = Vector2(5806, 1632)

[node name="Marker2D27" type="Marker2D" parent="Level4" groups=["horizontal"]]
position = Vector2(5806, 1674)

[node name="Marker2D28" type="Marker2D" parent="Level4" groups=["veritcal"]]
position = Vector2(7086, 862)

[node name="Marker2D29" type="Marker2D" parent="Level4" groups=["veritcal"]]
position = Vector2(7128, 862)

[node name="Marker2D30" type="Marker2D" parent="Level4" groups=["veritcal"]]
position = Vector2(7180, 862)

[node name="Marker2D31" type="Marker2D" parent="Level4" groups=["horizontal"]]
position = Vector2(8452, 1590)

[node name="Marker2D32" type="Marker2D" parent="Level4" groups=["horizontal"]]
position = Vector2(8452, 1632)

[node name="Marker2D33" type="Marker2D" parent="Level4" groups=["horizontal"]]
position = Vector2(8452, 1674)

[node name="Level5" type="Node2D" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
